src/frontend/snapshots/Shlang__frontend__parser_test__call.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"a((1+2),true,'1');\")"
---
Ok(
    Call {
        callee: Var(a)[0,1],
        args: [
            BinaryNode {
                kind: Add,
                left: Number(1)[3,4],
                right: Number(2)[5,6],
            }[3,6],
            true[8,12],
            "1"[14,16],
        ],
    }[2,17],
)
