src/frontend/snapshots/Shlang__frontend__parser_test__call_as_val.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"a(1,1,1)+1;\")"
---
Ok(
    BinaryNode {
        kind: Add,
        left: Call {
            callee: Var(a)[0,1],
            args: [
                Number(1)[2,3],
                Number(1)[4,5],
                Number(1)[6,7],
            ],
        }[2,8],
        right: Number(1)[9,10],
    }[2,10],
)
