src/frontend/snapshots/Shlang__frontend__parser_test__chained_access.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"a.b.c.d\")"
---
Ok(
    FieldAccess {
        target: FieldAccess {
            target: FieldAccess {
                target: Var(a) at 0:1,
                requested: .b at 2:3,
            } at 1:2,
            requested: .c at 4:5,
        } at 3:4,
        requested: .d at 6:7,
    } at 5:6,
)
