src/frontend/snapshots/Shlang__frontend__parser_test__chained_access_call.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"a.b().c().d().e()\")"
---
Ok(
    Spanned {
        item: FieldAccess(
            FieldAccess {
                target: Spanned {
                    item: FieldAccess(
                        FieldAccess {
                            target: Spanned {
                                item: FieldAccess(
                                    FieldAccess {
                                        target: Spanned {
                                            item: FieldAccess(
                                                FieldAccess {
                                                    target: Spanned {
                                                        item: Variable(
                                                            "a",
                                                        ),
                                                        span: Span(
                                                            0,
                                                            1,
                                                        ),
                                                    },
                                                    requested: Spanned {
                                                        item: Method {
                                                            name: "b",
                                                            args: [],
                                                        },
                                                        span: Span(
                                                            1,
                                                            2,
                                                        ),
                                                    },
                                                },
                                            ),
                                            span: Span(
                                                1,
                                                2,
                                            ),
                                        },
                                        requested: Spanned {
                                            item: Method {
                                                name: "c",
                                                args: [],
                                            },
                                            span: Span(
                                                5,
                                                6,
                                            ),
                                        },
                                    },
                                ),
                                span: Span(
                                    5,
                                    6,
                                ),
                            },
                            requested: Spanned {
                                item: Method {
                                    name: "d",
                                    args: [],
                                },
                                span: Span(
                                    9,
                                    10,
                                ),
                            },
                        },
                    ),
                    span: Span(
                        9,
                        10,
                    ),
                },
                requested: Spanned {
                    item: Method {
                        name: "e",
                        args: [],
                    },
                    span: Span(
                        13,
                        14,
                    ),
                },
            },
        ),
        span: Span(
            13,
            14,
        ),
    },
)
