src/frontend/snapshots/Shlang__frontend__parser_test__empty_call.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"a();\")"
---
Ok(
    Call {
        callee: Var(a) at 0:1,
        args: [],
    } at 2:3,
)
