src/frontend/snapshots/Shlang__frontend__parser_test__func_decl.snap
---
source: src/frontend/parser_test.rs
expression: "parse_full(\"func a(b){1}\")"
---
[
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: Value(
                        Function(
                            Function {
                                block: [
                                    Spanned {
                                        unspanned: ResultNode(
                                            Spanned {
                                                unspanned: Value(
                                                    Num(
                                                        1.0,
                                                    ),
                                                ),
                                                span: (
                                                    10,
                                                    11,
                                                ),
                                            },
                                        ),
                                        span: (
                                            10,
                                            11,
                                        ),
                                    },
                                ],
                                args: [
                                    "b",
                                ],
                            },
                        ),
                    ),
                    span: (
                        5,
                        10,
                    ),
                },
            },
        ),
        span: (
            5,
            10,
        ),
    },
]
